* fix scrollbar issue in status panel

--- a/dapp/src/components/CurrentTransactionsList/CurrentTransactionsList.scss
+++ b/dapp/src/components/CurrentTransactionsList/CurrentTransactionsList.scss
@@ -5,7 +5,7 @@
   padding: 10px 20px;
   position: relative;
   width: 260px;
-  overflow: scroll;
+  overflow: auto;
 
   @media (max-width: 768px) {
     width: 100%
